# econnect-python

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: building.yaml  linting.yaml  testing.yaml
elmo/: conf.py  connector.py  devices.py  query.py  router.py  settings.py
elmo/api/: client.py  decorators.py  exceptions.py  router.py
elmo/conf/: __init__.py  base.py  config.py  exceptions.py  options.py  settings.py
elmo/settings/: base.py  exceptions.py  validators.py
elmo/utils/: constants.py  parser.py  response_helper.py
requirements/: requirements-linting.txt  requirements-testing.in  requirements-testing.txt
src/elmo/: __about__.py  const.py  devices.py  query.py  systems.py  utils.py
src/elmo/api/: client.py  decorators.py  exceptions.py  router.py
tests/: conftest.py  test_base.py  test_client.py  test_config.py  test_decorators.py  test_devices.py  test_options.py  test_router.py  test_settings.py  test_utils.py  test_validators.py
tests/fixtures/: responses.py
tests/scripts/: debug_polling.py
