[tool.poetry]
name = "elmo-alerting"
version = "0.1.0"
description = "API adapter used to control programmatically an Elmo alarm system."
authors = ["Emanuele Palazzetti <hello@palazzetti.me>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.5"
requests = { version = "^2.21", extras = [ "security" ] }

[tool.poetry.dev-dependencies]
codecov = "^2.0"
pytest = "^4.5"
pytest-cov = "^2.7"
pytest-mock = "^1.10"
responses = "^0.10.6"
tox = "^3.10"

# Optional dev dependencies for linting
black = { version = "=19.3b0", python = "^3.7" }
flake8 = { version = "^3.7", python = "^3.7" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
