[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "econnect-python"
dynamic = ["version"]
description = 'API adapter used to control programmatically an Elmo alarm system'
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Emanuele Palazzetti", email = "emanuele.palazzetti@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "requests[security]",
]

[project.optional-dependencies]
dev = [
  "mypy",
  "pre-commit",
  # Test
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "responses",
  "tox",
]

lint = [
  "black",
  "flake8",
]

all = [
  "econnect-python[dev]",
  "econnect-python[lint]",
]

[project.urls]
Documentation = "https://github.com/palazzem/econnect-python#readme"
Issues = "https://github.com/palazzem/econnect-python/issues"
Source = "https://github.com/palazzem/econnect-python"

[tool.hatch.build.targets.wheel]
packages = ["src/elmo"]

[tool.hatch.version]
path = "src/elmo/__about__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = "src"

[tool.coverage.run]
omit = [
  "tests/*",
]
